# Hunter-Adams-RP2040-Demos

./: .gitignore  CMakeLists.txt  README.md
Audio/: CMakeLists.txt  README.md
Audio/a_Timer_Interrupt_DDS_Demo/: CMakeLists.txt  dactest.c
Audio/b_Multicore_DDS_Demo/: CMakeLists.txt  multicore_dds.c
Audio/b_Timer_Interrupt_DDS_Demo/: dactest.c
Audio/c_Audio_Beep_Synthesis_Single_Core/: CMakeLists.txt  beep_beep.c  pt_cornell_rp2040_v1_4.h
Audio/d_Audio_Beep_Synthesis_Multicore/: CMakeLists.txt  multitest.c  pt_cornell_rp2040_v1_3.h
Audio/d_Audio_Beep_Synthesis_Single_Core/: beep_beep.c
Audio/e_DMA_Demo/: CMakeLists.txt  dma-demo.c
Audio/f_Audio_FFT/: CMakeLists.txt  fft.c
Audio/f_Audio_FFT/VGA/: font_Tiny8.h  rgb.pio  vga16_graphics_v3.c
Audio/g_Audio_FFT/: hsync.pio
Basic_Demos/: CMakeLists.txt  README.md
Basic_Demos/Blinky_Demo/: CMakeLists.txt
Basic_Demos/GPIO_Interrupt_Demo/: CMakeLists.txt  irq_timing.c
Basic_Demos/Memory_Experiment/: CMakeLists.txt  memory_experimentation.c
Bluetooth/: CMakeLists.txt  README.md
Bluetooth/GATT_Client/: CMakeLists.txt  client.c  pt_cornell_rp2040_v1_3_client.h  pt_cornell_rp2040_v1_4_client.h
Bluetooth/GATT_Server/: CMakeLists.txt  server_demo.c
Bluetooth/GATT_Server/GAP_Advertisement/: gap_config.h
Bluetooth/GATT_Server/GATT_Service/: server_demo_gattfile.gatt  service_implementation.h
Bluetooth/GATT_Server/VGA/: font_glcd.c  vga16_graphics_v3.h  vsync.pio
Boids_Lab_Week_1/: pt_cornell_rp2040_v1.h  rgb.pio
Bootloaders/: CMakeLists.txt  README.md
Bootloaders/Serial_bootloader/: CMakeLists.txt
Cricket_Lab_Week_1/: CMakeLists.txt  multitest.c
Cricket_Lab_Week_3/: CMakeLists.txt  fft.c
Ethernet/: CMakeLists.txt  README.md
Ethernet/UDP_Transmitter/: udp_tx.h  udp_tx_parameters.h
Human_Input/: CMakeLists.txt  README.md
Human_Input/Keypad/: CMakeLists.txt  hsync.pio  keypad.c  rgb.pio  vga16_graphics_v2.c
Human_Input/Keypad/VGA/: font_ascii_characters.h  hsync.pio
Human_Input/Resistive_Touchscreen_Demo/: CMakeLists.txt  trackpad.c  vga16_graphics.c  vga16_graphics_v2.h
Lab_1/: CMakeLists.txt  README.md
Lab_1/Audio_FFT/: vsync.pio
Lab_1_Beeps/: CMakeLists.txt
Lab_1_Incremental/: CMakeLists.txt  README.md
Lab_1_Incremental/a_Blinky_Demo/: CMakeLists.txt  blinky.c
Lab_1_Incremental/b_Timer_Interrupt_DDS_Demo/: CMakeLists.txt
Lab_1_Incremental/b_Timer_Interrupt_Demo/: timer_irq.c
Lab_1_Incremental/c_Timer_Interrupt_DDS_Demo/: CMakeLists.txt
Lab_1_Incremental/f_Audio_Beep_Synthesis/: CMakeLists.txt
Lab_1_Incremental/g_Audio_FFT/: CMakeLists.txt
Lab_1_Incremental/g_DMA_Demo/: CMakeLists.txt
Lab_1_Incremental/h_Audio_FFT/: vga_graphics.c
Lab_1_Week_1/: multitest.c
Lab_2/: CMakeLists.txt  README.md
Lab_2/Animation_Demo/: CMakeLists.txt
Lab_2_Week_1/: animation.c
Lab_3/: CMakeLists.txt  README.md
Lab_3/MPU6050_IMU_Demo/: CMakeLists.txt  mpu6050.c
Lab_3/PWM_Demo/: CMakeLists.txt
Lab_3_PWM/: pwm-demo.c
More_Demos/: CMakeLists.txt  README.md
More_Demos/AM_Radio_Voice/: CMakeLists.txt
More_Demos/CAN/: CMakeLists.txt  can.pio  can_demo.c  can_driver.h
More_Demos/Memory_Experiment/: memory_experimentation.c
Multicore_DDS_Demo/: CMakeLists.txt  multicore_dds.c
Networking/: CMakeLists.txt  README.md
Networking/CAN/: CMakeLists.txt  can_demo.c  can_parameters.h
Networking/UDP_Transmitter/: CMakeLists.txt  udp_transmit.pio  udp_tx_demo.c  udp_tx_parameters.h
PWM/: CMakeLists.txt  README.md
PWM/AM_Radio_Beacon/: CMakeLists.txt  am-beacon.c
PWM/AM_Radio_Voice/: CMakeLists.txt  am-demo.c
PWM/PWM_Demo/: CMakeLists.txt  pwm-demo.c
Protothreads/: CMakeLists.txt  README.md
Protothreads/Protothreads_Demo/: CMakeLists.txt  Protothreads_test_1_3.c
Protothreads/a_Blinky/: CMakeLists.txt  Protothreads_blinky_1_4.c
Protothreads/b_Blinky_and_Serial/: CMakeLists.txt  Protothreads_blinky_and_serial_1_4.c
Protothreads/c_Two_core_blinky_and_serial/: CMakeLists.txt  Protothreads_2core_blinky_and_serial_1_4.c
Protothreads/d_Spawning_thread/: CMakeLists.txt  Protothreads_spawn_blinky_1_4.c
Protothreads/e_Priority_scheduling/: CMakeLists.txt  Protothreads_2core_blinky_count_and_serial_1_4.c
Protothreads/f_RP2350_doorbell/: CMakeLists.txt  Protothreads_2core_doorbell_1_4.c
Protothreads_Demo/: CMakeLists.txt  Protothreads_test_1.c  pt_cornell_rp2040_v1.h
Resistive_Touchscreen_Demo/: CMakeLists.txt
SD_Card/: CMakeLists.txt  sd_card_serial.c  simple_example.cpp  test_sd.c
SD_Card_Methane/: CMakeLists.txt  CMakeListsold.txt  hw_config.c  license.txt  sd_card_serial.c  simple_example.cpp
Sensors/: CMakeLists.txt  README.md
Sensors/MPU6050_IMU_Demo/: CMakeLists.txt  imu_demo.c  mpu6050.c  mpu6050.h
Simple_DAC_Demo/: dactest.c
Simple_DMA_Demo/: dma-demo.c
Simple_GPIO_Interrupt_Demo/: CMakeLists.txt  irq_timing.c
Stepper_Motors/: CMakeLists.txt  README.md
Stepper_Motors/Delta_Robot_Demo/: CMakeLists.txt  counter1.pio  stepper.c
Stepper_Motors/Stepper_Position_And_Speed_Control/: CMakeLists.txt  counter.pio  stepper.c  stepper1.pio
Stepper_Motors/Stepper_Position_Control/: CMakeLists.txt  motor_library.h  pacer.pio  pacer1.pio  stepper.c  stepper1.pio
Stepper_Motors/Stepper_Speed_Control/: CMakeLists.txt  counter.pio  pacer1.pio  stepper.c  stepper.pio
Stepper_Position_And_Speed_Control/: CMakeLists.txt  motor_library.h  pacer.pio
Stepper_Position_Control/: CMakeLists.txt  counter.pio  stepper.pio
Stepper_Speed_Control/: counter1.pio  motor_library.h  pacer.pio  stepper1.pio
Timer_Interrupt_Demo/: CMakeLists.txt
User_Input/: CMakeLists.txt
User_Input/Resistive_Touchscreen_Demo/: vga_graphics.h
VGA_Graphics/: CMakeLists.txt  README.md
VGA_Graphics/Animation_Demo/: CMakeLists.txt  animation.c  glcdfont.c  rgb.pio  vga16_graphics.h
VGA_Graphics/Barnsley_Fern/: CMakeLists.txt  barnsley_fern.c
VGA_Graphics/Game_of_Life/: CMakeLists.txt  conway.c  vga16_graphics.c  vga16_graphics.h  vga16_graphics_v2.c  (+3 more)
VGA_Graphics_Demo/: vga_graphics_demo.c
WiFi/: CMakeLists.txt
multi-testing/: CMakeLists.txt  pico_sdk_import.cmake
(+45 files in other folders)
